# exel_translator

./: .env.example  .gitignore  AGENTS.md  AI_DEV_SYSTEM_SINGLE_FILE.md  PLAN_DEEPL_TOONBOOM.md  domain_terms.json  exclude_patterns.yaml  glossary.tsv  main.py  pyproject.toml  pyrightconfig.json
src/harmony_translate/: __init__.py  audit.py  cache.py  cli.py  column_selector.py  config.py  excel_io.py  glossary.py  pipeline.py  preprocess.py  translator_deepl.py  translator_gemini.py  ui.py
tests/: test_config_env.py  test_excel_and_selector.py  test_glossary_layers.py  test_pipeline_preview.py  test_preprocess_and_glossary.py  test_translator_deepl.py  test_translator_gemini.py  test_ui_entry.py
vibeguard_exports/opencode/: PROMPT_TEMPLATE.md  README.md  RULES.md  SETUP.md
